--- a/index.html
+++ b/index.html
@@ -47,15 +47,22 @@
   </div>
   <div class="intro-section">
     <div class="intro-container w-container">
-      <h1 class="introemoji">🎉</h1>
-        <h1 class="intro-text1">Solve complex problems with delightful experiences.</h1>
-        <p class="intro-text2">Hi, I'm Qinwei! I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I interned at <span class="intro-highlight">IBM</span> and as a UX designer and I am working as an student designer for a <span class="intro-highlight">Cornell startup</span>. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
+      <h1 class="introemoji">✨</h1>
+        <h1 class="intro-text1">Yes, design solves problems. It is elegant and fun. But the most exciting thing about design is that it <span style="background-color: #fff; margin-top: 15px">inspires a brighter and better future</span>. </br>Qinwei aspires to be a <!-- <del style="color: #9f9f9f">explorer</del> --> <span style="background-color: #fff; margin-top: 15px">product designer</span> who drives inspirations. </h1>
+<!--         <p class="intro-text2">Hi, I'mbackground-color: #D9F7FF’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I interned at <span class="intro-highlight">IBM</span> and as a UX designer and I am working as an student designer for a <span class="intro-highlight">Cornell startup</span>. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p>  -->
       <p class="section-title">------
                       <a class="anchor" id="project-anchor"></a>
         <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
       </p>
     </div>
   </div>
+<!--     <div class="w-container project-0">
+      <div><img class="project1-img" src="images/Group-11.png">
+      </div>
+      <div><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
+      </div>
+    </div> -->
+
   <div class="project-1">
     <div class="project-row w-row">
       <div class="w-col w-col-1"></div>
@@ -99,20 +106,20 @@
   </div> -->
     <div class="w-container">
         <a class="anchor" id="blog-anchor"></a>
-        <p class="section-title">------<br>In <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> I give consideration to complex problems in UX design:</p>
+        <p class="section-title">------<br><!-- <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> --> There are examples of my design documentations and blogs of my work:</p>
         <div class="blog-divider"></div>
         <div class="blog-box">
-            <a target="_blank" href="https://medium.com/@qinweizhu/redesign-the-pace-of-reading-a-question-page-in-quora-10c38b8df874">
-            <h3 class="blog-title" id="blog1">
-                Redesign the Pace of Reading in Quora</h3>
-            <p class="blog-info">Mar 28・4 min read</p>
+            <a target="_blank" href="https://paper.dropbox.com/doc/Recipes-Detail-Page-iOS-0yu167qXr7IT9OnKdEB4k">
+            <h3 class="blog-title" id="blog2">
+                Design Challenge: Recipe App Detail Page Design</h3>
+            <p class="blog-info">Mar 28・7 min read・Design Process</p>
             </a>
         </div>
         <div class="blog-divider"></div>
         <div class="blog-box">
-            <a target="_blank" href="https://medium.com/@qinweizhu/critique-and-redesign-uploading-and-managing-images-on-slack-ios-96dd7e86f519#.egmo76fel">
-            <h3 class="blog-title" id="blog2">
-                Critique and Redesign: Uploading and managing images on Slack(iOS)   </h3>
+            <a target="_blank" href="https://blog.prototypr.io/redesign-the-pace-of-reading-a-question-page-in-quora-10c38b8df874">
+            <h3 class="blog-title" id="blog1">
+                The Pace of Reading in Quora</h3>
             <p class="blog-info">Mar 26・4 min read</p>
             </a>
         </div>
@@ -148,7 +155,12 @@
   <div>
     <div class="w-container">
       <p class="section-title">------
-        <br>Thank you for your time reviewing my work!&nbsp; If you are interested, feel free to explore more <span class="intro-highlight"><a style="color: #464646" href="about.html">about me</a></span> or take a look at <span class="intro-highlight"><a style="color: #464646" href="resume/resume_QinweiZhu.pdf">my resume</a></span>. Also, you are welcomed to reach out and share your thoughts with me!😁</p>
+        <br>Thank you for your time reviewing my work!&nbsp; If you are interested, please explore more <span class="intro-highlight"><a style="color: #464646" href="about.html">about me</a></span> or take a look at <span class="intro-highlight"><a style="color: #464646" href="resume/resume_QinweiZhu.pdf">my resume</a></span>. If you are interested in my industrial work at 
+        <span class="intro-highlight"><a style="color: #464646" href="https://www.ibm.com/linuxone">IBM</a></span>,
+        <span class="intro-highlight"><a style="color: #464646" href="http://www.thisisoberland.com/">Oberland</a></span>,
+        <span class="intro-highlight"><a style="color: #464646" href="https://comake.io/">Comake</a></span>,
+        <span class="intro-highlight"><a style="color: #464646" href="http://brixd.com/">Bri Experience</a></span>
+        that I am unable to share publicly here or just want to chat, feel free to contact me through the following links!😁</p>
       <div class="socialmedia-box"><a class="socialmedia-link" href="mailto:qz265@cornell.edu">Email</a><a class="socialmedia-link" href="https://www.linkedin.com/in/qinwei-zhu-116427129" target="_blank">LinkedIn</a><a class="socialmedia-link" href="https://medium.com/@qinweizhu" target="_blank">Medium</a><a class="socialmedia-link" href="https://www.instagram.com/qinweizzz/" target="_blank">Instagram</a>
       </div>
     </div>
