--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="w-container project-0 project-fitcat">
     <div class="w-row">
       <img class="w-col w-col-6 project-fitcat-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">FitCat&nbsp;</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a><a class="project-button w-button project-fitcat-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">FitCat&nbsp;</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a><a class="project-button w-button project-fitcat-button" href="fitcat.html">Read more</a>
       </div> 
     </div>
     </div>
@@ -76,7 +76,7 @@
     <div class="w-container project-0 project-kitchem">
     <div class="w-row">
       <img class="w-col w-col-6 project0-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem&nbsp;</h3><p class="project-description">Research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button project-kitchem-button w-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem&nbsp;</h3><p class="project-description">Research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button project-kitchem-button w-button" href="kitchem.html">Read more</a>
       </div> 
     </div>
     </div>
