--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/qinwei-zhu.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
   <script type="text/javascript">
     WebFont.load({
@@ -60,7 +61,8 @@
     <div class="w-container project-0 project-witus">
     <div class="w-row">
       <img class="w-col w-col-6 project0-img" src="images/Group-11.png">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a><a class="project-button project-witus-button w-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a>
+      <a class="project-button project-witus-button w-button" href="witus.html">Read more</a>
       </div> 
     </div>
     </div>
@@ -185,7 +187,7 @@
   <div>
     <div class="w-container">
       <p class="section-title">------
-        <br>Thank you for your time reviewing my work!&nbsp; If you are interested, please explore more <span class="intro-highlight"><a style="color: #464646" href="about.html">about me</a></span> or take a look at <span class="intro-highlight"><a style="color: #464646" href="resume/resume_QinweiZhu.pdf">my resume</a></span>. If you are interested in my industrial work at 
+        <br>Thank you for your time reviewing my work!&nbsp; Please explore more <span class="intro-highlight"><a style="color: #464646" href="about.html">about me</a></span> or take a look at <span class="intro-highlight"><a style="color: #464646" href="resume/resume_QinweiZhu.pdf">my resume</a></span>. If you are interested in my industrial work at 
         <span class="intro-highlight"><a style="color: #464646" href="https://www.ibm.com/linuxone">IBM</a></span>,
         <span class="intro-highlight"><a style="color: #464646" href="http://www.thisisoberland.com/">Oberland</a></span>,
         <span class="intro-highlight"><a style="color: #464646" href="https://comake.io/">Comake</a></span>,
