--- a/index.html
+++ b/index.html
@@ -57,85 +57,42 @@
       </p>
     </div>
   </div>
-  <!--trying-->
+
     <div class="w-container project-0 project-witus">
     <div class="w-row">
+    <a class="project-link w-inline-block" href="witus.html">
       <img class="w-col w-col-6 project0-img" src="images/Group-11.png">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a>
-      <a class="project-button project-witus-button w-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5 project0-des"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p>
+      <!-- <a class="project-button project-witus-button w-button" href="witus.html">Read more</a> -->
       </div> 
+      </a>
     </div>
     </div>
 
     <div class="w-container project-0 project-fitcat">
     <div class="w-row">
+    <a class="project-link w-inline-block" href="fitcat.html">
       <img class="w-col w-col-6 project-fitcat-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">FitCat&nbsp;</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a><a class="project-button w-button project-fitcat-button" href="fitcat.html">Read more</a>
+      <div class="w-col w-col-5 project0-des">
+      <h3 class="project-heading">FitCat&nbsp;</h3>
+      <p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p><!-- <a class="project-button w-button project-fitcat-button" href="fitcat.html">Read more</a> -->
       </div> 
+      </a>
     </div>
     </div>
 
     <div class="w-container project-0 project-kitchem">
     <div class="w-row">
+    <a class="project-link w-inline-block" href="kitchem.html">
       <img class="w-col w-col-6 project0-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
-      <div class="w-col w-col-5 project0-des"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem&nbsp;</h3><p class="project-description">Research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button project-kitchem-button w-button" href="kitchem.html">Read more</a>
+      <div class="w-col w-col-5 project0-des"><h3 class="project-heading">Kitchem&nbsp;</h3><p class="project-description">Research on how concrete instructions could facilitate learning abstract concepts.</p>
+<!--       <a class="project-button project-kitchem-button w-button" href="kitchem.html">Read more</a> -->
       </div> 
+    </a>
     </div>
     </div>
 
-  <!--trying-->
-<!--   <div class="w-row">
-    <div class="project-des-box w-col-4">
-        <div class="divider"></div>
-      </div>
-      <div class="project-des-box w-col-8">
-        <div class="project-0">
-          <div><img class="project0-img" src="images/Group-11.png"></div>
-        </div>
-      </div>    
-  </div> -->
-  <!-- 
-  <div class="project-1">
-    <div class="project-row w-row">
-      <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" src="images/Group-11.png">
-      </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
-      </div>
-      <div class="w-col w-col-1"></div>
-    </div>
-  </div>
-    <div class="project-2">
-    <div class="project-row w-row">
-      <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
-      </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a>
-      <a class="project-button w-button" href="fitcat.html">Read more</a>
-      </div>
-      <div class="w-col w-col-1"></div>
-    </div>
-  </div>
-  <div class="project-3">
-    <div class="project-row w-row">
-      <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
-      </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">A research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
-      </div>
-      <div class="w-col w-col-1"></div>
-    </div>
-  </div> -->
-<!--   <div class="project-4">
-    <div class="project-row w-row">
-      <div class="w-col w-col-1"></div>
-      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/gallery.png" srcset="images/gallery-p-500x291.png 500w, images/gallery-p-800x465.png 800w, images/gallery-p-1080x628.png 1080w, images/gallery-p-1600x930.png 1600w, images/gallery.png 1927w">
-      </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="gallery.html"><h3 class="project-heading">Previous Projects</h3><p class="project-description">The tangible interaction, design challenge, IBM internship and other projects that I've done during my undergrad years.</p></a><a class="project-button w-button" href="gallery.html">Read more</a>
-      </div>
-      <div class="w-col w-col-1"></div>
-    </div>
-  </div> -->
+
     <div class="w-container">
         <a class="anchor" id="blog-anchor"></a>
         <p class="section-title">------<br><!-- <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> --> There are examples of my design documentations and blogs of my work:</p>
