Data Visualization Update

--- a/witus.html
+++ b/witus.html
@@ -60,6 +60,7 @@
     <div class="proj-bg-container w-container">
         <video class="proj-img" loop autoplay>
             <source src="video/witus_cover.mp4">
+            <img class="proj-img" src="images/proj1.1-svg.svg">
         </video>
       <h1 class="proj-title">Working in the U.S. (WITUS)</h1>
     </div>
@@ -88,9 +89,7 @@
   </div>
   <div class="proj-tab-pane">
     <div class="proj-main-container w-container">
-      <div class="project-content w-col w-col-1"></div>
-      <div class="project-content w-col w-col-10">
-              <h4 class="proj-section-title">Problem</h4>
+      <h4 class="proj-section-title">Problem</h4>
       <blockquote class="quote"><span class="quote-text">International students find it hard to find work authorization information on online job searching platforms.</span>
       </blockquote>
       <p class="proj-text">Work authorization is essential for international students to work in the U.S. However, the current online job hunting platforms mostly lack of this information on their job postings page. This not only causes international students' stuggling of finding the information, but also a waste of time for both employers and employees to process without reaching an agreement on whether to provide work authorization.</p>
@@ -114,7 +113,6 @@
       </blockquote>
       <p class="proj-text">Interviewing 5 participants who are all STEM major international students at Cornell and are all actively looking for jobs, we introduced our persona <span class="intro-highlight">Lilly Li</span> and instilled our opportunities:</p>
         <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/witus-card.png" srcset="images/witus-card-p-500x263.png 500w, images/witus-card-p-800x421.png 800w, images/witus-card-p-1080x568.png 1080w, images/witus-card.png 1448w">
-        <div class="proj-pic-title">- Card Sorting -</div>
       <div class="proj-tab w-tabs">
         <div class="w-tab-content">
           <div class="proj-tab-pane w--tab-active w-tab-pane" data-w-tab="Tab 1">
@@ -307,7 +305,7 @@
             <source src="video/witus_p4.mp4">
         </video>
       </div>
-      <h4 class="proj-section-title">What I learned</h4>
+      <h4 class="proj-section-title">Future Work</h4>
       <blockquote class="quote"><span class="quote-text">We haven't spare enough thoughts on how to help people to manage job application process more effectively.</span>
       </blockquote>
       <p class="proj-text">All my teammates were happy about the result we got and aspire to work together to implement it. But I want to ask ourselves two more questions before we move on:</p>
@@ -319,7 +317,6 @@
         </li>
       </ol>
       <p class="proj-text">I look forward to go back to work on those new opportunities soon.😁</p>
-      </div>
     </div>
   </div>
   <div class="footer">
