--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
       </div>
     </div>
   </div>
+
   <div class="intro-section">
     <div class="intro-container w-container">
-      <h1 class="introemoji">✨</h1>
-        <h1 class="intro-text1">Yes, design solves problems. It is elegant and fun. But the most exciting thing about design is that it <u style="background-color: #fff; margin-top: 15px">inspires a brighter and better future.</u> </br>Qinwei is a <!-- <del style="color: #9f9f9f">explorer</del> --> <u style="background-color: #fff; margin-top: 15px">product designer</u> who aspires to drive inspirations. </h1>
-<!--         <p class="intro-text2">Hi, I'mbackground-color: #D9F7FF’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I interned at <span class="intro-highlight">IBM</span> and as a UX designer and I am working as an student designer for a <span class="intro-highlight">Cornell startup</span>. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p>  -->
+<!--       <h1 class="introemoji">✨</h1>
+ -->        <h1 class="intro-text1">Qinwei is a product designer who:</h1>
+        <h1 class="intro-text1" style="margin-left: 60px">✨ is passionate about Productivity and Collaboration<br>✨ appreciates feedback, logic and creativity<br> ✨ always has fun with her work and life</h1>
+
       <p class="section-title">------
                       <a class="anchor" id="project-anchor"></a>
         <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
@@ -92,7 +94,69 @@
     </div>
     </div>
 
-
+    <div class="w-container project-0 project-datavis">
+    <div class="w-row">
+    <a class="project-link w-inline-block" href="datavis.html">
+      <img class="w-col w-col-6 project0-img" src="images/datavis.png">
+      <div class="w-col w-col-5 project0-des"><h3 class="project-heading">Data Visualization Gallery&nbsp;</h3><p class="project-description">The visualization of how professors at Cornell Bill Gates Hall work with each other and the falling of 1000 meteorites that people have witnessed.</p>
+      <!-- <a class="project-button project-witus-button w-button" href="witus.html">Read more</a> -->
+      </div> 
+      </a>
+    </div>
+    </div>
+  <!--trying-->
+<!--   <div class="w-row">
+    <div class="project-des-box w-col-4">
+        <div class="divider"></div>
+      </div>
+      <div class="project-des-box w-col-8">
+        <div class="project-0">
+          <div><img class="project0-img" src="images/Group-11.png"></div>
+        </div>
+      </div>    
+  </div> -->
+  <!-- 
+  <div class="project-1">
+    <div class="project-row w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5"><img class="project1-img" src="images/Group-11.png">
+      </div>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div>
+    <div class="project-2">
+    <div class="project-row w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
+      </div>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a>
+      <a class="project-button w-button" href="fitcat.html">Read more</a>
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div>
+  <div class="project-3">
+    <div class="project-row w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
+      </div>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">A research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div> -->
+<!--   <div class="project-4">
+    <div class="project-row w-row">
+      <div class="w-col w-col-1"></div>
+      <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/gallery.png" srcset="images/gallery-p-500x291.png 500w, images/gallery-p-800x465.png 800w, images/gallery-p-1080x628.png 1080w, images/gallery-p-1600x930.png 1600w, images/gallery.png 1927w">
+      </div>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="gallery.html"><h3 class="project-heading">Previous Projects</h3><p class="project-description">The tangible interaction, design challenge, IBM internship and other projects that I've done during my undergrad years.</p></a><a class="project-button w-button" href="gallery.html">Read more</a>
+      </div>
+      <div class="w-col w-col-1"></div>
+    </div>
+  </div> -->
     <div class="w-container">
         <a class="anchor" id="blog-anchor"></a>
         <p class="section-title">------<br><!-- <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> --> There are examples of my design documentations and blogs of my work:</p>
