--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="intro-container w-container">
 <!--       <h1 class="introemoji">✨</h1>
  -->        <h1 class="intro-text1">Qinwei is a product designer who:</h1>
-        <h1 class="intro-text1" style="margin-left: 60px">💓 is passionate about Productivity and Collaboration<br>🤔 appreciates feedback, logic and creativity<br> 🎉 always has fun with her work and life</h1>
+        <h1 class="intro-text1" style="margin-left: 60px">🔥 is passionate about Productivity and Collaboration<br>🤔 appreciates feedback, logic and creativity<br> 🎉 has fun with her work</h1>
 
       <p class="section-title">------
                       <a class="anchor" id="project-anchor"></a>
